# cpp-simsolar

./: CMakeLists.txt
.cache/clangd/index/: _fixes.hpp.2609889DBD3F8A2F.idx  _vectorize.hpp.D23C7BD65E774678.idx  attribute.cpp.ECD6F2F13C038156.idx  attribute.hpp.5AD72EB40557427D.idx  base.cpp.B3E73732A4D5985B.idx  base.hpp.8D9FB15110AD2C4D.idx  cg_trackball.cpp.C60FFE0D7627C7EF.idx  cg_trackball.h.4DE877F86B1195B7.idx  common.hpp.EA3954EA959D3871.idx  compute_common.hpp.51C7BC1411B83AC0.idx  compute_vector_relational.hpp.E5E1EFE95671F7FE.idx  constants.hpp.7AB092A73FCFBD65.idx  constants.inl.041D69DCDBAE347B.idx  context.c.CB3048946FB422E4.idx  egl_context.c.1F641441ED05C91C.idx  egl_context.h.3891756C97544AA5.idx  epsilon.hpp.1078E8BCFBD15B1D.idx  epsilon.inl.70D3DA5E1B54D02D.idx  exponential.hpp.D4590D2EC4C8DA05.idx  func_common.inl.9329F9821A5601AC.idx  func_exponential.inl.8DFAFD32E935584B.idx  func_geometric.inl.19681B7F1999CAB2.idx  func_integer.inl.23141DC094184B53.idx  func_matrix.inl.872E0B16A11B70AF.idx  func_packing.inl.B21FC2FB1DDD559E.idx  func_trigonometric.inl.1B217E5C71727A27.idx  func_vector_relational.inl.C1199331299B717D.idx  fwd.hpp.77BFE4E3B91E1769.idx  geometric.hpp.E8C9CC67816383B1.idx  gl3w.c.5B1AC7E94BB19435.idx  gl3w.h.16BAD26839E71F88.idx  glcorearb.h.3E9E001F9FB09460.idx  glfw3.h.9525E41FDA5ADC69.idx  glm.hpp.F31C7DBA7C334A61.idx  glx_context.c.0D9BD65A2BCF6BE0.idx  glx_context.h.536ACDA0DE3FE343.idx  imconfig.h.092A1F16DF0F6C09.idx  imgui.cpp.4204202B987BCFF0.idx  imgui.h.63CF0CFE31B5A270.idx  imgui_demo.cpp.0049395EDCDB0A22.idx  (+180 more)
include/: attribute.hpp  base.hpp  cg_trackball.h
src/: cg_trackball.cpp  main.cpp
